--- a/KSmoving System/pages/viewRidePats.html
+++ b/KSmoving System/pages/viewRidePats.html
@@ -69,7 +69,7 @@
                 data: JSON.stringify({ volunteerId: -1 }),
                 success: function (data) {
                     var arr_rides = JSON.parse(data.d);
-                    GENERAL.RIDEPAT.setRidePatList(arr_rides);
+                    GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_rides));
 
                     for (i in arr_rides) {
 
